--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.17",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -18,7 +19,8 @@
     "react-native-gesture-handler": "^2.16.1",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-swipeable": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
