--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^6.1.17",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.17",
+    "expo-document-picker": "^12.0.1",
+    "expo-intent-launcher": "^11.0.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
